--- a/towns.html
+++ b/towns.html
@@ -26,7 +26,7 @@
 		<button id="btnDelete">Delete</button>
 	</article>
   <div id="result"></div>
-
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
 </body>
 
 </html>
